    oidc-agent from SOCK_SEQPACKET to SOCK_STREAM
  * This allows forwarding of the oidc-agent through ssh
  * Added getAccessToken2 to liboidc-agent
  * Access tokens can now be requested by issuer url; the suer can set an
    default account config for each issuer
  * Added the correlating functions to liboidc-agent
  * oidc-token can now also be used with issuer urls

  [ Gabriel Zachmann]
  * Added the elixir public client to the list of public clients

  [ Gabriel Zachmann ]
  * Fixed a segfault if the pubclients.conf file does not exist
  * Fixed segfault if the issuer.config in the oidc-agent directory doesn't
    exist and an AT is requested by issuer.
  * Fixed behavior of oidc-gen -p when the passed file does not exist. 

  [ Gabriel Zachmann ]
  * Support on MacOS

  [ Gabriel Zachmann ]
  * Fixed a bug that did not save the information from dynamic client
    registration (did not save merged data).
  * Updated the cJSON library

  [ Gabriel Zachmann ]
  * Fixed a bug due to which no error message was displayed when trying to
    load an account configuration and the oidc-agent directory was not
    accessible for oidc-add.
  * This bug also caused the agent to crash if oidc-token was used to load
    this account configuration on the fly and the oidc-agent directory was 
    not accessible for oidc-agent.

  [ Gabriel Zachmann ]
  * Add possibility to allow applications that run under another user access
    to the agent by using the --with-group option

  [ Marcus Hardt ]
  * Add debhelper-token
  * Remove build-essential from Build-Depends
  * Improve clean target to fix "source-is-missing" lintian warnings

  [ Gabriel Zachmann ]
  * Add possibility to avoid custom uri scheme (useful when running on a
    remote server)
  * Fixed bug with doubled communication when not all required scopes could be
    registered

 -- Marcus Hardt <hardt@kit.edu>  Wed, 24 Jul 2019 12:00:09 +0200