@@ -14,6 +14,7 @@ list_t*      delimitedStringToList(const char* str, char delimiter);
 char*        listToDelimitedString(list_t* list, char delimiter);
 list_t*      intersectLists(list_t* a, list_t* b);
 list_t*      subtractLists(list_t* a, list_t* b);
+char*        subtractListStrings(const char* a, const char* b, const char del);
 char*        listToJSONArrayString(list_t* list);
 list_node_t* findInList(list_t* l, const void* v);
 list_t*      findAllInList(list_t* l, const void* v);
